[metadata]
name = pypack-harmony-pxu
version = 0.0.2
url = https://example.com
author = Your Name
author_email = your.name@example.com
description = This package does amazing things.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
classifiers = 
    License :: OSI Approved :: MIT License

[options]
package_dir = 
    = src
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires = 
    termcolor>=1.1.0,<2

[options.packages.find]
where = src
exclude = 
    test*

[options.entry_points]
console_scripts = 
    harmony = imppkg.harmony:main


# tools
[mypy]
python_version = 3.10
warn_unused_configs = True
show_error_context = True
pretty = True
namespace_packages = True
check_untyped_defs = True

[flake8]
max-line-length = 120

[tool:pytest]
testpaths = tests
addopts = --cov=imppkg

[coverage:run]
branch = True

[coverage:report]
show_missing = True
skip_covered = True

[coverage:paths]
source = 
    src/imppkg/
    */site-packages/imppkg/

[tox:tox]
isolated_build = True
envlist = py310,py39

[testenv]
deps = 
    pytest
    pytest-cov
    pytest-randomly
commands = 
    pytest {posargs}

[testenv:typecheck]
deps = 
    mypy
    pytest
    types-termcolor
commands = 
    mypy --ignore-missing-imports {posargs:src test}

[testenv:format]
skip_install = True
deps = 
    black
commands = 
    black {posargs:src test}

[testenv:lint]
skip_install = True
deps = 
    flake8
    flake8-bugbear
commands = 
    flake8 {posargs:src test}